src/test/ui/mismatched_types/fn-variance-1.stderr
error[E0631]: type mismatch in function arguments
  --> $DIR/fn-variance-1.rs:21:5
   |
13 | fn takes_mut(x: &mut isize) { }
   | --------------------------- found signature of `for<'r> fn(&'r mut isize) -> _`
...
21 |     apply(&3, takes_mut);
   |     ^^^^^ expected signature of `fn(&{integer}) -> _`
   |
note: required by `apply`
  --> $DIR/fn-variance-1.rs:15:1
   |
15 | fn apply<T, F>(t: T, f: F) where F: FnOnce(T) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0631]: type mismatch in function arguments
  --> $DIR/fn-variance-1.rs:25:5
   |
11 | fn takes_imm(x: &isize) { }
   | ----------------------- found signature of `for<'r> fn(&'r isize) -> _`
...
25 |     apply(&mut 3, takes_imm);
   |     ^^^^^ expected signature of `fn(&mut {integer}) -> _`
   |
note: required by `apply`
  --> $DIR/fn-variance-1.rs:15:1
   |
15 | fn apply<T, F>(t: T, f: F) where F: FnOnce(T) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

